gateways.tf
resource "aws_internet_gateway" "test-env-gw" {
  vpc_id = "${aws_vpc.test-env.id}"

tags {
    Name = "test-env-gw"
  }
}
